Rick is awesome; I just fixed a stupid singleton issue

--- a/examples/with-git.ipynb
+++ b/examples/with-git.ipynb
@@ -5,63 +5,30 @@
    "metadata": {},
    "source": [
     "# Alongside Git\n",
-    "Stockroom is built to use alongside git. This tutorial will guide you through a typical git workflow that uses stockroom to store data."
+    "Stockroom is built to use alongside git. This tutorial will guide you through a typical git workflow that uses stockroom to\n",
+    "- Store data\n",
+    "- Use that data to train a network in PyTorch\n",
+    "- Version the model as we go\n",
+    "- Tag the hyper parameters in different experiments\n",
+    "\n",
+    "For this tutorial, we use a pretrained PyTorch network to classify cats and dogs. We have divided the whole tutorial into 7 stages.\n",
+    "1. Setup the repository\n",
+    "2. Download some data and store it in stockroom\n",
+    "3. Download the pretrained model and save it in stockroom\n",
+    "4. Train the network and save the model + hyper parameters\n",
+    "5. Download more data if the accuracy is less\n",
+    "6. Train the network again with new data. Save the new network & hyper parameters\n",
+    "7. Fine tune the hyper parameters"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setup the repository"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reinitialized existing Git repository in /home/hhsecond/mypro/stockroom/examples/.git/\n",
-      "Hangar Repo already exists at /home/hhsecond/mypro/stockroom/examples. Initializing it as stock repository\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git init\n",
-    "!stock init --name sherin --email a@b.c"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "On branch master\n",
-      "Changes not staged for commit:\n",
-      "  (use \"git add <file>...\" to update what will be committed)\n",
-      "  (use \"git checkout -- <file>...\" to discard changes in working directory)\n",
-      "\n",
-      "\t\u001b[31mmodified:   git-workflow.ipynb\u001b[m\n",
-      "\t\u001b[31mmodified:   head.stock\u001b[m\n",
-      "\n",
-      "Untracked files:\n",
-      "  (use \"git add <file>...\" to include in what will be committed)\n",
-      "\n",
-      "\t\u001b[31m.ipynb_checkpoints/\u001b[m\n",
-      "\n",
-      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git status"
+    "## 1. Setup the repository\n",
+    "In a typical software development project, we'll have a git repository ready. Let's make that first.\n",
+    "\n",
+    "#### Initialize git"
    ]
   },
   {
@@ -73,13 +40,90 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 66b4993] initialized repo\n",
-      " 2 files changed, 165 insertions(+), 31 deletions(-)\n"
+      "Reinitialized existing Git repository in /home/hhsecond/mypro/stockroom/examples/.git/\n"
      ]
     }
    ],
    "source": [
-    "!git add .gitignore head.stock git-workflow.ipynb\n",
+    "!git init"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Initialize stock\n",
+    "We need to initialize stock repository at the same location. A stock initialization is essentially a hangar initialization (if hangar repo doesn't exist at the given location) and creating `head.stock` file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hangar Repo initialized at: /home/hhsecond/mypro/stockroom/examples/.hangar\n"
+     ]
+    }
+   ],
+   "source": [
+    "!stock init --name sherin --email a@b.c"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Initial git commit\n",
+    "Now we need to make the first commit. Remember, we use this notebook for controlling this workflow tutorial. Versioning the notebook might not be a good idea in this case since each checkout will change the status of our notebook which hinder us from moving forward. But in a typical project workflow you require you to version everything"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch master\n",
+      "Untracked files:\n",
+      "  (use \"git add <file>...\" to include in what will be committed)\n",
+      "\n",
+      "\t\u001b[31m.ipynb_checkpoints/\u001b[m\n",
+      "\t\u001b[31mdownloads/\u001b[m\n",
+      "\t\u001b[31mrequirements.txt\u001b[m\n",
+      "\t\u001b[31mwith-git.ipynb\u001b[m\n",
+      "\n",
+      "nothing added to commit but untracked files present (use \"git add\" to track)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[master 66b4aee] initialized repo\n",
+      " 1 file changed, 1 insertion(+), 2 deletions(-)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!echo \"\\ndownloads\" > .gitignore\n",
+    "!git add .gitignore head.stock\n",
     "!git commit -m 'initialized repo'"
    ]
   },
@@ -87,135 +131,169 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Store Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "# Represent each input by an array of its binary digits.\n",
-    "def binary_encode(i, num_digits):\n",
-    "    return np.array([i >> d & 1 for d in range(num_digits)])\n",
+    "## 2. Download & Store Data\n",
+    "As you know, we'll be building a dog vs cat classifier. Hence we need a lot of images of dogs and cats. Let's use a readily available package (`google_images_download`) to download images from google and store it in hangar\n",
     "\n",
-    "# One-hot encode the desired outputs: [number, \"fizz\", \"buzz\", \"fizzbuzz\"]\n",
-    "def fizz_buzz_encode(i):\n",
-    "    if   i % 15 == 0: out = 3\n",
-    "    elif i % 5  == 0: out = 2\n",
-    "    elif i % 3  == 0: out = 1\n",
-    "    else:             out = 0\n",
-    "    return np.array([out])\n",
-    "\n",
-    "def fizz_buzz_decode(i, prediction):\n",
-    "    return [str(i), \"fizz\", \"buzz\", \"fizzbuzz\"][prediction]"
+    "#### Download images\n",
+    "This might throw error on some attempts but may be keep trying few times"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import stockroom\n",
-    "datastore = stockroom.datastore(write=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Hangar ArraysetDataWriter                 \n",
-       "    Arrayset Name             : fizzbuzz                \n",
-       "    Schema Hash              : 1=917d1bd632e3                \n",
-       "    Variable Shape           : False                \n",
-       "    (max) Shape              : (10,)                \n",
-       "    Datatype                 : <class 'numpy.int64'>                \n",
-       "    Named Samples            : True                \n",
-       "    Access Mode              : a                \n",
-       "    Number of Samples        : 0                \n",
-       "    Partial Remote Data Refs : False\n"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "proto = binary_encode(2, 10)\n",
-    "datastore.arraysets.init_arrayset('fizzbuzz', prototype=proto)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Hangar ArraysetDataWriter                 \n",
-       "    Arrayset Name             : fizzbuzz_out                \n",
-       "    Schema Hash              : 1=27c2ed219ffa                \n",
-       "    Variable Shape           : False                \n",
-       "    (max) Shape              : (1,)                \n",
-       "    Datatype                 : <class 'numpy.int64'>                \n",
-       "    Named Samples            : True                \n",
-       "    Access Mode              : a                \n",
-       "    Number of Samples        : 0                \n",
-       "    Partial Remote Data Refs : False\n"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "proto = fizz_buzz_encode(2)\n",
-    "datastore.arraysets.init_arrayset('fizzbuzz_out', prototype=proto)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "datastore.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Commit message:\n",
-      "init arraysets\n",
-      "Commit Successful. Digest: a=85cf8cfc1a564c3fae9ad29107cf4e273d35f7fe\n"
+      "\n",
+      "Item no.: 1 --> Item name = cat\n",
+      "Evaluating...\n",
+      "Starting Download...\n",
+      "\n",
+      "\n",
+      "Unfortunately all 100 could not be downloaded because some images were not downloadable. 0 is all we got for this search filter!\n",
+      "\n",
+      "Errors: 0\n",
+      "\n",
+      "\n",
+      "Item no.: 1 --> Item name = dog\n",
+      "Evaluating...\n",
+      "Starting Download...\n",
+      "\n",
+      "\n",
+      "Unfortunately all 100 could not be downloaded because some images were not downloadable. 0 is all we got for this search filter!\n",
+      "\n",
+      "Errors: 0\n",
+      "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "({'dog': []}, 0)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "!stock commit -m 'init arraysets'"
+    "from google_images_download import google_images_download\n",
+    "downloader = google_images_download.googleimagesdownload()\n",
+    "arguments = {\n",
+    "    \"format\": \"jpg\",\n",
+    "    \"limit\":100,\n",
+    "    \"print_urls\":True,\n",
+    "    \"size\": \"medium\",\n",
+    "    \"aspect_ratio\": \"panoramic\"\n",
+    "}\n",
+    "\n",
+    "# downloading cat\n",
+    "arguments['keywords'] = 'cat'\n",
+    "downloader.download(arguments)\n",
+    "\n",
+    "\n",
+    "# downloading dog\n",
+    "arguments['keywords'] = 'dog'\n",
+    "downloader.download(arguments)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## FizzBuzz Model"
+    "#### Store to StockRoom\n",
+    "We need hangar columns ready for stockroom to store data there. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "from PIL import Image\n",
+    "import numpy as np\n",
+    "\n",
+    "newshape = (240, 240)\n",
+    "\n",
+    "for file in Path('downloads/cat').iterdir():\n",
+    "    try:\n",
+    "        data = np.array(Image.open(file).resize((240, 240)))\n",
+    "    except Exception as e:\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[132, 131, 127],\n",
+       "        [120, 115, 112],\n",
+       "        [111, 112, 107],\n",
+       "        ...,\n",
+       "        [241, 240, 238],\n",
+       "        [243, 242, 240],\n",
+       "        [242, 240, 241]],\n",
+       "\n",
+       "       [[134, 133, 129],\n",
+       "        [123, 120, 115],\n",
+       "        [114, 113, 108],\n",
+       "        ...,\n",
+       "        [241, 240, 238],\n",
+       "        [243, 242, 240],\n",
+       "        [242, 241, 239]],\n",
+       "\n",
+       "       [[136, 137, 132],\n",
+       "        [131, 130, 125],\n",
+       "        [122, 119, 114],\n",
+       "        ...,\n",
+       "        [241, 240, 238],\n",
+       "        [242, 241, 239],\n",
+       "        [241, 240, 238]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[225, 203, 179],\n",
+       "        [225, 204, 177],\n",
+       "        [226, 202, 176],\n",
+       "        ...,\n",
+       "        [245, 244, 242],\n",
+       "        [247, 246, 244],\n",
+       "        [246, 245, 243]],\n",
+       "\n",
+       "       [[225, 203, 179],\n",
+       "        [226, 205, 178],\n",
+       "        [226, 202, 176],\n",
+       "        ...,\n",
+       "        [245, 244, 242],\n",
+       "        [246, 245, 243],\n",
+       "        [247, 246, 244]],\n",
+       "\n",
+       "       [[225, 203, 179],\n",
+       "        [226, 205, 178],\n",
+       "        [226, 202, 176],\n",
+       "        ...,\n",
+       "        [245, 244, 242],\n",
+       "        [246, 245, 243],\n",
+       "        [246, 245, 243]]], dtype=uint8)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
    ]
   },
   {
@@ -224,19 +302,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "model = torch.nn.Sequential(\n",
-    "    torch.nn.Linear(10, 100),\n",
-    "    torch.nn.ReLU(),\n",
-    "    torch.nn.Linear(100, 4))"
-   ]
   }
  ],
  "metadata": {
